# git-spice

./: .changie.yaml  .envrc  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.adoc  README.md  SPONSORS.md  anchor.go  anchor_create.go  anchor_list.go  anchor_rm.go  anchor_track.go  auth.go  auth_login.go  auth_logout.go  auth_status.go  auth_test.go  bottom.go  branch.go  branch_bottom.go  branch_checkout.go  branch_comment.go  branch_comment_add.go  branch_comment_edit.go  branch_comment_list.go  branch_comment_resolve.go  branch_comment_stage.go  branch_comment_submit_staged.go  branch_create.go  branch_delete.go  branch_diff.go  (+123 more)
doc/: .gitattributes  .gitignore  Makefile  Pipfile  SUMMARY.md  gen.go  go.mod  go.sum  intro.md  license.md  mise.toml  mkdocs.yml  preface.txt  pyproject.toml  reference.md  tools.go
doc/cmd/pikchr/: .gitattributes  pikchr.c
doc/hooks/: badge.py  cliref.py  footer.py  freeze.py  listing.py  pikchr.py  released.py  replace.py
doc/img/: README.md
doc/includes/: cli-reference.md  cli-shorthands.md  companies.md
doc/includes/captures/: README.txt  branch-split-reassociate.txt  branch-submit.txt  (+2 more)
doc/overrides/: main.html
doc/src/: changelog.md  faq.md  how-to.md  index.md  recipes.md
doc/tapes/: 20250924-branch-split-reuse-name.tape  20250924-commit-fixup.tape  20251005-downstack-track.tape  20251018-commit-pick.tape  20260312-branch-checkout-scroll.tape  20260426-branch-split-prefix-prompt.tape  README.md
(+2464 files in other folders)
